--- a/index.html
+++ b/index.html
@@ -4,9 +4,42 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>To Do Bom!</title>
+    <title>ToDoBoM!</title>
+    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/media.css" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Cuprum:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
+    <div class="page">
+      <header class="header">
+        <h1>ToDoBoM!</h1>
+        <h4>Every Day To Do App</h4>
+      </header>
+      <nav class="controls">
+        <label for="sortBy">Sort by:</label>
+        <select name="sortBy" id="sortBy">
+          <optgroup label="ascending">
+            <option value="importance--ascending" label="Importance"></option>
+            <option value="created--ascending" label="Creation date"></option>
+            <option value="completion--ascending" label="Not completed first"></option>
+            <option value="name--ascending" label="Name"></option>
+          </optgroup>
+          <optgroup label="descending">
+            <option value="importance--descending" label="Importance" selected></option>
+            <option value="created--descending" label="Creation date"></option>
+            <option value="completion--descending" label="Completed first"></option>
+            <option value="name--descending" label="Name"></option>
+          </optgroup>
+        </select>
+      </nav>
+      <main class="tasks__wrapper"></main>
+      <footer class="footer"></footer>
+      <div class="popup none"></div>
+    </div>
     <script src="./js/script.js"></script>
   </body>
 </html>
