--- a/index.html
+++ b/index.html
@@ -36,8 +36,39 @@
           </optgroup>
         </select>
       </nav>
-      <main class="tasks__wrapper"></main>
-      <footer class="footer"></footer>
+      <main class="tasks__wrapper">
+        <section class="tasks">
+          <div class="task-item" data-importance="red" data-id="1000" data-category="">
+            <div class="task-item__left">
+              <img
+                src="./images/category/category-315.png"
+                alt=""
+                class="task-item__categroy-img"
+              />
+              <div class="task-item__btns">
+                <div class="btn btn-save none">Save</div>
+                <div class="btn btn-update">Update</div>
+                <div class="btn btn-delete">Delete</div>
+              </div>
+            </div>
+            <div class="task-item__center">
+              <h2 class="task-item__name">Eat pizza!</h2>
+              <div class="task-item__creation">12/01/21</div>
+            </div>
+            <div class="task-item__right">
+              <input
+                type="checkbox"
+                name="task-item--1000"
+                id="task-item--1000"
+                class="task-item__checkbox"
+              />
+            </div>
+          </div>
+        </section>
+      </main>
+      <footer class="footer">
+        <h3><span class="num-of-today-tasks">30</span> tasks completed today!</h3>
+      </footer>
       <div class="popup none"></div>
     </div>
     <script src="./js/script.js"></script>
