working on basic layout-tasks and footer

--- a/index.html
+++ b/index.html
@@ -53,15 +53,45 @@
             </div>
             <div class="task-item__center">
               <h2 class="task-item__name">Eat pizza!</h2>
-              <div class="task-item__creation">12/01/21</div>
+              <div class="task-item__creation">Created on: 12/01/21</div>
             </div>
             <div class="task-item__right">
-              <input
-                type="checkbox"
-                name="task-item--1000"
-                id="task-item--1000"
-                class="task-item__checkbox"
+              <label for="task-item--1000" class="task-item__checkbox-wrapper completed">
+                <input
+                  type="checkbox"
+                  name="task-item--1000"
+                  id="task-item--1000"
+                  class="task-item__checkbox"
+                />
+              </label>
+            </div>
+          </div>
+          <div class="task-item" data-importance="green" data-id="1000" data-category="">
+            <div class="task-item__left">
+              <img
+                src="./images/category/category-315.png"
+                alt=""
+                class="task-item__categroy-img"
               />
+              <div class="task-item__btns">
+                <div class="btn btn-save none">Save</div>
+                <div class="btn btn-update">Update</div>
+                <div class="btn btn-delete">Delete</div>
+              </div>
+            </div>
+            <div class="task-item__center">
+              <h2 class="task-item__name">Eat pizza!</h2>
+              <div class="task-item__creation">Created on: 12/01/21</div>
+            </div>
+            <div class="task-item__right">
+              <label for="task-item--1000" class="task-item__checkbox-wrapper completed">
+                <input
+                  type="checkbox"
+                  name="task-item--1000"
+                  id="task-item--1000"
+                  class="task-item__checkbox"
+                />
+              </label>
             </div>
           </div>
         </section>
